# points-mall-data

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.test  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.git-hooks/: pre-commit
.github/workflows/: ci.yml
app/dependencies/: auth.py
tests/: test_auth_dependency.py
