[project]
name = "points-mall-data"
version = "0.1.0"
description = "Points Mall Data Service (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8001
reload = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]           # line too long — handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
